[tool.poetry]
name = "migreat"
version = "0.2.0"
description = "A schema isolated Postgres migrator for shared database micro services"
authors = ["Flying Hashibuto <hashibuto@noreply.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
